just did some styling changes because I can't make up my mind

--- a/index.html
+++ b/index.html
@@ -25,44 +25,44 @@
         <h2>Sized Using Units .col-#</h2>
             <p>Every row in Bootstrap has 12 units of space to divide up. Every division within a row will be a column. Each column class will start with 'col' and can have additional parts (col-1, col-sm-1 etc) depending on what you want to do with the columns</p>
             <div class="row"> 
-                <div class="col-6 bg-success bg-opacity-50">I am 6 units</div>
-                <div class="col-6 bg-info bg-opacity-50">I am 6 units</div>
+                <div class="col-6 bg-success">I am 6 units</div>
+                <div class="col-6 bg-info">I am 6 units</div>
             </div>
             <div class="row"> 
-                <div class="col-4 bg-success bg-opacity-50">I am 4 units</div>
-                <div class="col-8 bg-info bg-opacity-50">I am 8 units</div>
+                <div class="col-4 bg-success">I am 4 units</div>
+                <div class="col-8 bg-info">I am 8 units</div>
             </div>
             <div class="row">
-                <div class="col bg-secondary bg-opacity-50">I am 2 units</div>
-                <div class="col-8 bg-primary bg-opacity-50">I am 8 units. Less than 12 will leave extra space.</div>
-                <div class="col bg-secondary bg-opacity-50">I am 2 units</div>
+                <div class="col bg-secondary">I am 2 units</div>
+                <div class="col-8 bg-primary">I am 8 units. Less than 12 will leave extra space.</div>
+                <div class="col bg-secondary">I am 2 units</div>
             </div>
             <div class="row">
-                    <div class="col-3 bg-warning bg-opacity-50">I am 3 units</div>
-                    <div class="col-6 bg-danger bg-opacity-50">I am 6 units. Less than 12 will leave extra space.</div>
+                    <div class="col-3 bg-warning">I am 3 units</div>
+                    <div class="col-6 bg-danger">I am 6 units. Less than 12 will leave extra space.</div>
             </div>
     </div>
     <br>
     <div class="container">
         <h2>Auto Sized Using Only .col</h2>
         <div class="row">
-            <div class="col bg-warning bg-opacity-50">I am auto sized</div>
-            <div class="col bg-success bg-opacity-50">I am auto sized</div>
-            <div class="col bg-warning bg-opacity-50">I am auto sized</div>
+            <div class="col bg-warning">I am auto sized</div>
+            <div class="col bg-success">I am auto sized</div>
+            <div class="col bg-warning">I am auto sized</div>
         </div>
         <div class="row">
-            <div class="col bg-success bg-opacity-50">I am auto sized</div>
-            <div class="col bg-warning bg-opacity-50">I am auto sized</div>
-            <div class="col bg-success bg-opacity-50">I am auto sized</div>
-            <div class="col bg-warning bg-opacity-50">I am auto sized</div>
-            <div class="col bg-success bg-opacity-50">I am auto sized</div>
+            <div class="col bg-success">I am auto sized</div>
+            <div class="col bg-warning">I am auto sized</div>
+            <div class="col bg-success">I am auto sized</div>
+            <div class="col bg-warning">I am auto sized</div>
+            <div class="col bg-success">I am auto sized</div>
         </div>
         <br>
         <h2>Auto Sized Using .col and col-#</h2>
         <div class="row">
-            <div class="col bg-success bg-opacity-50">I am auto sized</div>
-            <div class="col bg-warning bg-opacity-50">I am auto sized</div>
-            <div class="col-8 bg-success bg-opacity-50">I am 8 Units</div>
+            <div class="col bg-success">I am auto sized</div>
+            <div class="col bg-warning">I am auto sized</div>
+            <div class="col-8 bg-success">I am 8 Units</div>
         </div>
     </div>
     <br>
@@ -70,10 +70,10 @@
         <h2>Responsive Grid</h2>
         <p>The responsive grid classes (col-sm-#, col-md-#, col-lg-# etc) allow for the column to take up that many units above the specified breakpoint. The col-sm will apply to anything above 576px, the col-md will apply to anything above 768px and so on.</p>
         <div class="row">
-            <div class="col-md-6 col-lg-3 bg-danger bg-opacity-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
-            <div class="col-md-6 col-lg-3 bg-warning bg-opacity-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
-            <div class="col-md-6 col-lg-3 bg-success bg-opacity-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
-            <div class="col-md-6 col-lg-3 bg-info bg-opacity-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-danger">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-warning">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
         </div>
     </div>
 
