added multiple grid alignment examples

--- a/index.html
+++ b/index.html
@@ -76,7 +76,69 @@
             <div class="col-md-6 col-lg-3 bg-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
         </div>
     </div>
-
+    <br>
+    <div class="container">
+        <h2>Grid Alignment</h2>
+        <p>By default the divs will stretch to be as big as the tallest div. You can add classes to apply flexbox properties.</p>
+        <h3>Align-items-start</h3>
+        <div class="row align-items-start">
+            <div class="col-md-6 col-lg-3 bg-danger">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis soluta dolorem facilis suscipit debitis voluptatibus delectus? Ducimus dolore odit, repellat porro accusantium in, ea possimus, ad nostrum at aspernatur officiis.
+            Tempore necessitatibus, quod, quo impedit quae expedita ad dolores, dolorum saepe reiciendis ab eveniet laudantium dolorem sit voluptates recusandae quaerat perferendis similique non debitis itaque ex minus alias aut. Itaque!</div>
+            <div class="col-md-6 col-lg-3 bg-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <h3>Align-items-center</h3>
+        <div class="row align-items-center">
+            <div class="col-md-6 col-lg-3 bg-danger">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis soluta dolorem facilis suscipit debitis voluptatibus delectus? Ducimus dolore odit, repellat porro accusantium in, ea possimus, ad nostrum at aspernatur officiis.
+            Tempore necessitatibus, quod, quo impedit quae expedita ad dolores, dolorum saepe reiciendis ab eveniet laudantium dolorem sit voluptates recusandae quaerat perferendis similique non debitis itaque ex minus alias aut. Itaque!</div>
+            <div class="col-md-6 col-lg-3 bg-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <h3>Align-items-end</h3>
+        <div class="row align-items-end">
+            <div class="col-md-6 col-lg-3 bg-danger">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis soluta dolorem facilis suscipit debitis voluptatibus delectus? Ducimus dolore odit, repellat porro accusantium in, ea possimus, ad nostrum at aspernatur officiis.
+            Tempore necessitatibus, quod, quo impedit quae expedita ad dolores, dolorum saepe reiciendis ab eveniet laudantium dolorem sit voluptates recusandae quaerat perferendis similique non debitis itaque ex minus alias aut. Itaque!</div>
+            <div class="col-md-6 col-lg-3 bg-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <h3>Align-self</h3>
+        <div class="row justify-content-between">
+            <div class="col-2">
+                <h4>align-self-start (first column)</h4>
+            </div>
+            <div class="col-2">
+                <h4>align-self-end (last column)</h4>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-md-6 col-lg-3 bg-danger align-self-start">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis soluta dolorem facilis suscipit debitis voluptatibus delectus? Ducimus dolore odit, repellat porro accusantium in, ea possimus, ad nostrum at aspernatur officiis.
+            Tempore necessitatibus, quod, quo impedit quae expedita ad dolores, dolorum saepe reiciendis ab eveniet laudantium dolorem sit voluptates recusandae quaerat perferendis similique non debitis itaque ex minus alias aut. Itaque!</div>
+            <div class="col-md-6 col-lg-3 bg-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+            <div class="col-md-6 col-lg-3 bg-info align-self-end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae vitae nobis recusandae iste nam unde, suscipit tempore culpa exercitationem est assumenda aliquam quam accusamus esse doloremque aspernatur quod quaerat nemo?</div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <h2>Responsive Images with img-fluid Class</h2>
+        <div class="row">
+            <div class="col-xl-4 col-md-6"><img src="images/cardinal_patrice-bouchard.jpg" class="img-fluid" alt="picture of a red cardinal songbird taken by patrice bouchard"></div>
+            <div class="col-xl-4 col-md-6"><img src="images/jay_jeremy-hynes.jpg" class="img-fluid" alt="picture of a blue jay taken by jeremy hynes"></div>
+            <div class="col-xl-4 col-md-6"><img src="images/robin_aarn-giri.jpg" class="img-fluid" alt="picture of a brown and orangish european robin taken by aarn giri"></div>
+        </div>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
