edited justify content section to add more and change the dummy text because I was getting bored of lorem.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,26 @@
     </div>
     <br>
     <div class="container">
+        <h3>Justify Content</h3>
+        <p>By default, the items are justified to the start, but it can be changed with these classes. there are also many more, including classes for breakpoints. For example, justify-content-between can be combined with justify-content-lg-end to move them to the end at the large breakpoint. </p>
+        <div class="row justify-content-center">
+            <h4>justify-content-center</h4>
+            <div class="col-3 bg-primary">The vast ocean is home to many majestic creatures, such as whales, who swim for thousands of miles.</div>
+            <div class="col-3 bg-secondary">The vast ocean is home to many majestic creatures, such as whales, who swim for thousands of miles.</div>
+        </div>
+        <div class="row justify-content-end">
+            <h4>justify-content-end</h4>
+            <div class="col-3 bg-primary">The vast ocean is home to many majestic creatures, such as whales, who swim for thousands of miles.</div>
+            <div class="col-3 bg-secondary">The vast ocean is home to many majestic creatures, such as whales, who swim for thousands of miles.</div>
+        </div>
+        <div class="row justify-content-between">
+            <h4>justify-content-between</h4>
+            <div class="col-3 bg-primary">The vast ocean is home to many majestic creatures, such as whales, who swim for thousands of miles.</div>
+            <div class="col-3 bg-secondary">The vast ocean is home to many majestic creatures, such as whales, who swim for thousands of miles.</div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
         <h2>Responsive Images with img-fluid Class</h2>
         <div class="row">
             <div class="col-xl-4 col-md-6"><img src="images/cardinal_patrice-bouchard.jpg" class="img-fluid" alt="picture of a red cardinal songbird taken by patrice bouchard"></div>
